--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 <body
     class="home page-template page-template-page-templates page-template-full-width page-template-page-templatesfull-width-php page page-id-5151 woocommerce-no-js full-width ltx-theme-header-icon paceloader-enabled no-sidebar wpb-js-composer js-comp-ver-5.6 vc_responsive">
-    
+        <div id="ltx-preloader"></div>
     <div class="header-wrapper  header-h1   header-parallax ltx-parallax   wrapper-navbar-layout-transparent">
         <div id="nav-wrapper" class="navbar-layout-transparent">
             <div class="container">
