--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- <link rel="pingback" href="http://lamaro.like-themes.com/xmlrpc.php"> -->
     <link type="text/css"  href="./style/style1.css" rel="stylesheet" />
-    <link type="text/css" media="only screen and (max-width: 768px)" href="./style/autoptimize.css" rel="stylesheet" />
-    <title>ANDALUS</title>
+    <!-- <link type="text/css" media="only screen and (max-width: 768px)" href="./style/autoptimize.css" rel="stylesheet" /> -->
+    <title>Lamaro &#8211; WordPress Theme</title>
     <link rel='dns-prefetch' href='//fonts.googleapis.com' />
     
       
@@ -1318,10 +1318,10 @@
                                         <div class="heading-content">
                                             <h4
                                                 class="subheader ltx-sr-id-like_sc_header_10176766661918581468 ltx-sr ltx-sr-effect-fade_in ltx-sr-el-block ltx-sr-delay-100 ltx-sr-duration-300 ltx-sr-sequences-50">
-                                                Sign up for speacial offers</h4>
+                                                Waiting for you</h4>
                                             <h4
                                                 class="header ltx-sr-id-like_sc_header_10176766661582531328 ltx-sr ltx-sr-effect-fade_in ltx-sr-el-block ltx-sr-delay-0 ltx-sr-duration-1000 ltx-sr-sequences-0">
-                                                Subscribe our newsletter</h4>
+                                                Join our world</h4>
                                         </div>
                                     </div>
                                 </div>
