--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <link rel="pingback" href="http://lamaro.like-themes.com/xmlrpc.php"> -->
     <link type="text/css"  href="./style/style1.css" rel="stylesheet" />
     <!-- <link type="text/css" media="only screen and (max-width: 768px)" href="./style/autoptimize.css" rel="stylesheet" /> -->
-    <title>Lamaro &#8211; WordPress Theme</title>
+    <title>Al-Andalus</title>
     <link rel='dns-prefetch' href='//fonts.googleapis.com' />
     
       
