--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                                     
                                 </div>
                             </section>
-                            <section data-vc-full-width="true" data-vc-full-width-init="false" id="agency"
+                            <!-- <section data-vc-full-width="true" data-vc-full-width-init="false" id="agency"
                                 class="vc_section vc_custom_1545617337269 vc_section-has-fill bg-pos-center-center text-align-center-ms">
                                 <div class="vc_row wpb_row vc_row-fluid">
                                     <div class="wpb_column vc_column_container vc_col-sm-12">
@@ -1294,7 +1294,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
+                            </section> -->
                             <div class="vc_row-full-width vc_clearfix"></div>
                                                         
                         </div>
@@ -1360,7 +1360,7 @@
                     class="col-lg-4 col-md-6 col-sm-12 col-ms-12 hidden-xs hidden-ms hidden-sm hidden-md matchHeight clearfix">
                     <div class="footer-widget-area">
                         <div id="ltx_navmenu-4" class="widget widget_ltx_navmenu">
-                            <h3 class="header-widget ltx-theme-header">Explore<span class="widget-icon"></span></h3>
+                             <!-- <h3 class="header-widget ltx-theme-header">Explore<span class="widget-icon"></span></h3> -->
                             <div class="menu-main-menu-container">
                                 <ul id="menu-main-menu-1" class="menu">
                                     <li
