--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-ms-12 hidden-xs hidden-ms hidden-sm  matchHeight clearfix">
-                    <div class="footer-widget-area"> <a class="logo" href="#"><img
+                    <div class="footer-widget-area"> <a class="logo" href="#AA"><img
                                 src="./assests/imgs/logo_lamaro.png"
                                 alt="Lamaro" />
                         <div id="text-12" class="widget widget_text">
