--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                                                     <div class="visible-xs" style="height: 32px;"></div>
                                                 </div>
                                                 <div class="services-sc  layout-photos ltx-style-gray row centered" id="like_sc_services_963794123">
-                                                    <!-- ITEM1 -->
+                                                    <!## ITEM1 ##>>
                                                     <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                         <article id="post-6897"
                                                             class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -994,7 +994,7 @@
                                                         </article>
                                                     </div>
                                                     
-                                                <!-- ITEM2 -->
+                                                <!## ITEM2 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1021,7 +1021,7 @@
                                                     </article>
                                                 </div> 
                                                 
-                                                <!-- ITEM3 -->
+                                                <!## ITEM3 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1049,7 +1049,7 @@
                                                 </div> 
 
 
-                                                <!-- ITEM4 -->
+                                                <!## ITEM4 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1076,7 +1076,7 @@
                                                     </article>
                                                 </div> 
 
-                                                <!-- ITEM5 -->
+                                                <!## ITEM5 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1103,7 +1103,7 @@
                                                     </article>
                                                 </div>
 
-                                                <!-- ITEM6 -->
+                                                <!## ITEM6 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1131,7 +1131,7 @@
                                                 </div>
 
 
-                                                <!-- ITEM7 -->
+                                                <!## ITEM7 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1159,7 +1159,7 @@
                                                 </div>
 
 
-                                                <!-- ITEM8 -->
+                                                <!## ITEM8 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1186,7 +1186,7 @@
                                                     </article>
                                                 </div>
 
-                                                <!-- ITEM9 -->
+                                                <!## ITEM9 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1214,7 +1214,7 @@
                                                 </div>
 
 
-                                                <!-- ITEM10 -->
+                                                <!## ITEM10 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
@@ -1241,7 +1241,7 @@
                                                     </article>
                                                 </div>
 
-                                                <!-- ITEM10 -->
+                                                <!## ITEM10 ##>
                                                 <div class="col-lg-6 col-md-12 col-sm-12 col-ms-12">
                                                     <article id="post-6897"
                                                         class="post-6897 services type-services status-publish has-post-thumbnail hentry services-category-routes">
